InsuranceOrg/force-app/main/default/objects/vlocity_ins__IntegrationRetryPolicy__c/fields/vlocity_ins__MaximumNumberOfRetries__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__MaximumNumberOfRetries__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Maximum number of retries</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>