InsuranceOrg/force-app/main/default/objects/vlocity_ins__IntegrationRetryPolicy__c/fields/vlocity_ins__OrchestrationItemDefinitionId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__OrchestrationItemDefinitionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Orchestration Item Definition</label>
    <referenceTo>vlocity_ins__OrchestrationItemDefinition__c</referenceTo>
    <relationshipLabel>Integration Retry Policies</relationshipLabel>
    <relationshipName>IntegrationRetryPolicies</relationshipName>
    <type>Lookup</type>
</CustomField>