InsuranceOrg/force-app/main/default/objects/vlocity_ins__IntegrationRetryPolicy__c/fields/vlocity_ins__TimeBetweenRetries__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__TimeBetweenRetries__c</fullName>
    <defaultValue>60</defaultValue>
    <label>Time between retries (Seconds)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>