InsuranceOrg/force-app/main/default/objects/vlocity_ins__IntegrationRetryPolicy__c/recordTypes/vlocity_ins__MonotonousForeverRetryPolicy.recordType-meta.xml
<RecordType>
    <fullName>vlocity_ins__MonotonousForeverRetryPolicy</fullName>
    <active>true</active>
    <label>Monotonous Forever Retry Policy</label>
</RecordType>