InsuranceOrg/force-app/main/default/objects/vlocity_ins__IntegrationRetryPolicy__c/recordTypes/vlocity_ins__MonotonousRetryPolicy.recordType-meta.xml
<RecordType>
    <fullName>vlocity_ins__MonotonousRetryPolicy</fullName>
    <active>true</active>
    <label>Monotonous Retry Policy</label>
</RecordType>