InsuranceOrg/force-app/main/default/objects/vlocity_ins__IntegrationRetryPolicy__c/recordTypes/vlocity_ins__NoRetryPolicy.recordType-meta.xml
<RecordType>
    <fullName>vlocity_ins__NoRetryPolicy</fullName>
    <active>true</active>
    <label>No Retry Policy</label>
</RecordType>